# quant-factor-portfolio-pipeline

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
config/: pipeline.yaml
reports/: main.tex
scripts/: plot_comparison.py  plot_factors.py  plot_individual_funds.py  run_all_stages.py  run_pipeline.py  run_stages_1_2.py  stage_1_factors.py  stage_2_selection.py  stage_3_optimize.py  stage_3b_maxser.py  stage_4_black_litterman.py  stage_5_backtest.py  test_run.py
src/: config.py
src/analytics/: performance.py  risk.py  statistical_tests.py
src/black_litterman/: equilibrium.py  model.py  sensitivity.py  views.py
src/data/: cleaner.py  loader.py
src/factors/: analyst_factors.py  base.py  earnings_quality_factors.py  fundamental_factors.py  growth_factors.py  leverage_factors.py  momentum_factors.py  price_factors.py  registry.py  risk_factors.py  sentiment_factors.py  validation.py  valuation_factors.py
src/portfolio/: backtest.py  covariance.py  maxser.py  optimization.py
src/selection/: fama_macbeth.py  information_coefficient.py  lasso_selection.py  selector.py
src/visualization/: factor_plots.py  portfolio_plots.py  style.py
